--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,12 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
 
     <style name="FullScreenDialogStyle" parent="Theme.AppCompat.Dialog">
 
@@ -27,5 +20,4 @@
         <!--        <item name="android:windowEnterAnimation">@anim/slide_up</item>-->
         <!--        <item name="android:windowExitAnimation">@anim/slide_down</item>-->
     </style>
-
 </resources>
