--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,4 +28,10 @@
         <!--        <item name="android:windowExitAnimation">@anim/slide_down</item>-->
     </style>
 
+    <style name="AnimationPopupStyle">
+
+        <item name="android:windowEnterAnimation">@anim/dialog_fade_in</item>
+        <item name="android:windowExitAnimation">@anim/dialog_fade_out</item>
+    </style>
+
 </resources>
