--- a/app/src/main/res/layout/activity_connect_1ch.xml
+++ b/app/src/main/res/layout/activity_connect_1ch.xml
@@ -44,7 +44,7 @@
                     android:layout_gravity="center"
                     android:layout_marginStart="@dimen/_10sdp"
                     android:fontFamily="@font/spoqahansansneo_bold"
-                    android:text="2ch 측정"
+                    android:text="1ch 측정"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_11sdp"
                     android:textStyle="bold"
@@ -165,6 +165,7 @@
                 android:inputType="number"
                 android:padding="@dimen/_5sdp"
                 android:singleLine="true"
+                android:maxLength="3"
                 android:layout_marginStart="@dimen/_5sdp"
                 android:textSize="@dimen/_6sdp"
                 app:layout_constraintTop_toBottomOf="@id/name_txv"
@@ -208,6 +209,7 @@
                 android:inputType="date"
                 android:maxLength="10"
                 android:padding="@dimen/_5sdp"
+                android:maxLines="1"
                 android:singleLine="true"
                 android:textSize="@dimen/_6sdp"
                 android:layout_marginEnd="@dimen/_5sdp"
@@ -227,6 +229,7 @@
                 android:padding="@dimen/_5sdp"
                 android:singleLine="true"
                 android:textSize="@dimen/_6sdp"
+                android:maxLength="3"
                 android:layout_marginStart="@dimen/_5sdp"
                 app:layout_constraintTop_toBottomOf="@id/tv_dayOfBirth"
                 app:layout_constraintStart_toEndOf="@id/edit_age"
