--- a/app/src/main/res/layout/activity_main_test.xml
+++ b/app/src/main/res/layout/activity_main_test.xml
@@ -150,6 +150,7 @@
                 android:maxLines="1"
                 android:inputType="date"
                 android:hint="@string/height"
+                android:maxLength="3"
                 android:layout_marginStart="@dimen/_10sdp"
                 app:layout_constraintTop_toBottomOf="@id/height_txv"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -177,6 +178,7 @@
                 android:maxLines="1"
                 android:hint="@string/birth_hint"
                 android:inputType="date"
+                android:maxLength="10"
                 android:layout_marginEnd="@dimen/_10sdp"
                 app:layout_constraintTop_toBottomOf="@id/birth_txv"
                 app:layout_constraintStart_toStartOf="parent"
@@ -207,6 +209,7 @@
                 android:textSize="@dimen/_6sdp"
                 android:padding="@dimen/_5sdp"
                 android:inputType="date"
+                android:maxLength="3"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/birth_edt"
                 app:layout_constraintTop_toBottomOf="@id/weight_txv"
