11/08 RMS데이터 부분 제외 하고 수정 완료

--- a/app/src/main/res/layout/activity_connect_1ch.xml
+++ b/app/src/main/res/layout/activity_connect_1ch.xml
@@ -150,6 +150,7 @@
                 android:padding="@dimen/_5sdp"
                 android:singleLine="true"
                 android:hint="@string/name"
+                android:nextFocusDown="@id/edit_age"
                 android:layout_marginEnd="@dimen/_5sdp"
                 app:layout_constraintTop_toBottomOf="@id/name_txv"
                 app:layout_constraintStart_toStartOf="parent"
@@ -168,6 +169,7 @@
                 android:maxLength="3"
                 android:layout_marginStart="@dimen/_5sdp"
                 android:textSize="@dimen/_6sdp"
+                android:nextFocusDown="@id/edit_weight"
                 app:layout_constraintTop_toBottomOf="@id/name_txv"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/edit_name"
@@ -212,6 +214,7 @@
                 android:maxLines="1"
                 android:singleLine="true"
                 android:textSize="@dimen/_6sdp"
+                android:nextFocusDown="@id/edit_height"
                 android:layout_marginEnd="@dimen/_5sdp"
                 app:layout_constraintTop_toBottomOf="@id/tv_dayOfBirth"
                 app:layout_constraintStart_toStartOf="parent"
@@ -230,6 +233,7 @@
                 android:singleLine="true"
                 android:textSize="@dimen/_6sdp"
                 android:maxLength="3"
+                android:nextFocusDown="@id/edit_memo"
                 android:layout_marginStart="@dimen/_5sdp"
                 app:layout_constraintTop_toBottomOf="@id/tv_dayOfBirth"
                 app:layout_constraintStart_toEndOf="@id/edit_age"
