--- a/app/src/main/res/layout/activity_main_test.xml
+++ b/app/src/main/res/layout/activity_main_test.xml
@@ -119,6 +119,7 @@
                 android:maxLines="1"
                 android:hint="@string/name"
                 android:inputType="textPersonName"
+                android:nextFocusDown="@id/birth_edt"
                 android:layout_marginEnd="@dimen/_10sdp"
                 app:layout_constraintTop_toBottomOf="@id/name_txv"
                 app:layout_constraintStart_toStartOf="parent"
@@ -179,6 +180,7 @@
                 android:hint="@string/birth_hint"
                 android:inputType="date"
                 android:maxLength="10"
+                android:nextFocusDown="@id/height_edt"
                 android:layout_marginEnd="@dimen/_10sdp"
                 app:layout_constraintTop_toBottomOf="@id/birth_txv"
                 app:layout_constraintStart_toStartOf="parent"
@@ -209,6 +211,7 @@
                 android:textSize="@dimen/_6sdp"
                 android:padding="@dimen/_5sdp"
                 android:inputType="date"
+                android:nextFocusDown="@id/special_edt"
                 android:maxLength="3"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/birth_edt"
